# corten

./: .gitignore  .gitlab-ci.yml  Cargo.toml  Dockerfile  README.md  corten.sh  rust-toolchain.toml
docs/: Meine Bibliothek.bib  lib.bib  typing_rules.md
docs/expose/: .gitignore  Expose.tex  pushall.rs
docs/expose-presentation/: .gitignore  example.java  lib.bib  presentation.tex  rust-no-spec.rs  rust-spec.rs
docs/expose-presentation/logos/: haskell.svg.tikz  rust.svg.tikz
docs/lean-proof/: Corten.lean  Main.lean  README.md  lakefile.lean
docs/lean-proof/Corten/: Language.lean  Proofs.lean  RefinedTyping.lean  Semantics.lean  Update.lean  Util.lean
docs/master-thesis/: sdqthesis.cls  thesis.bib  thesis.tex
docs/master-thesis/sections/: abstract_de.tex  abstract_en.tex  declaration.tex  related_work.tex
docs/presentation/: .gitignore  open-pdfpc.sh  presentation.pdfpc  presentation.tex
docs/presentation/snippets/: clamp-with-spec.rs  concurrency.rs  decr.rs  flux-comparison-1.rs  flux-comparison-2.rs  mut-arg-caller.rs  mut-arg.rs  smt.lisp  strong-updates.rs
docs/thesis/: draculatheme.sty  thesis.tex
examples/clamp/: Cargo.toml  README.md
examples/clamp/src/: lib.rs  (+1 more)
examples/tutorial/: Cargo.toml
refinement-language/: Cargo.toml
refinement-language/src/: lib.rs
runtime-library/: Cargo.toml
runtime-library/src/: lib.rs
verification/: Cargo.toml
verification/examples/: macro.rs
verification/src/: buildin_functions.rs  constraint_generator.rs  hir_ext.rs  main.rs  refinement_context.rs  refinements.rs  smtlib_ext.rs  test_utils.rs  test_with_rustc.rs
verification/src/constraint_generator/: mod.rs  tests.rs
verification/src/program_analysis/: cfg.rs  mod.rs  reaching_definitions.rs
(+1 files in other folders)
