[package]
name = "refinement-language"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = { version = "1.0", features = ["full", "extra-traits"] }
syn-serde = { version = "0.2", features = ["json"] }
quote = "1.0"
nom="*"
proc-macro2="*"