[package]
name = "liquid-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private = true

# [[bin]]
# name = "liquid-rustc"
# test = false
# doctest = false

[dependencies]
"env_logger"="*"
"serde"="*"



[dev-dependencies]
"runtime-library" = { path = "../runtime-library" }