[package]
name = "liquid-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.rust-analyzer]
rustc_private = true

# [[bin]]
# name = "liquid-rustc"
# test = false
# doctest = false

[dependencies]
tracing = "*"
tracing-subscriber = { version = "0.3.9", features = [
  "env-filter",
  "json",
  "ansi",
] }
"serde" = "*"
syn = { version = "1.0.93", features = ["full"] }
syn-serde = { version = "0.2", features = ["json"] }
rsmt2 = { version = "0.14.1" }
anyhow = "*"
quote = "1.0.17"
tempfile="3.3.0"


[dev-dependencies]
"runtime-library" = { path = "../runtime-library" }
test-log = { version = "0.2.10", features = [
  "trace",
], default-features = false }
pretty_assertions = "1.2.1"
unindent="0.1.8"
